--- a/golangci.yml
+++ b/golangci.yml
@@ -65,7 +65,7 @@ run:
   # Define the Go version limit.
   # Mainly related to generics support since go1.18.
   # Default: use Go version from the go.mod file, fallback on the env var `GOVERSION`, fallback on 1.18
-  go: '1.22'
+  go: '1.23.6'
 
 linters:
   # Disable all linters.
@@ -179,3 +179,17 @@ linters-settings:
     # Do not allow non-required aliases.
     # Default: false
     no-extra-aliases: true
+
+  depguard:
+    rules:
+      main:
+        files:
+          - $all
+        deny:
+          - pkg: "github.com/sirupsen/logrus"
+            desc: "logging is standardised via zap logger"
+          #- pkg: "github.com/stretchr/testify"
+          #  desc: "test assertions must use gotest.tools/v3/assert"
+
+  gofumpt:
+    modpath: "legionbot"
